--- a/index.html
+++ b/index.html
@@ -38,15 +38,71 @@
           <img src="assets/images/CFP.png" alt="Call For Papers" style="max-width:100%;height:auto" />
         </section>
 
-        <section style="margin-top:24px">
-          <h3 class="section-title">Important Dates</h3>
-          <ul class="list">
-            <li>Paper Submission Deadline: <strong class="note">October 25 2025</strong></li>
-            <li>Notification of Acceptance: <strong class="note">November 25 2025</strong></li>
-            <li>Camera-Ready Submission: <strong class="note">January 01 2026</strong></li>
-            <li>Author Registration Deadline: <strong class="note">March 01 2026</strong></li>
-            <li>Conference Dates: <strong class="note">April 28–29 2026</strong></li>
-          </ul>
+        <section style="margin-top:24px" class="schedule-section">
+          <div class="schedule-header">
+            <span class="emoji" aria-hidden="true">📅</span>
+            <h3 class="section-title" style="margin:0">ICEODIS’2026 Schedule</h3>
+            <span class="important-badge" aria-hidden="true">Important Dates</span>
+          </div>
+
+          <div class="schedule-grid">
+            <div class="schedule-card" aria-label="Abstracts schedule">
+              <div class="card-head">
+                <h4>1. Abstracts</h4>
+              </div>
+              <div class="card-body">
+                <table class="table">
+                  <thead>
+                    <tr><th scope="col">Stage</th><th scope="col">Date</th></tr>
+                  </thead>
+                  <tbody>
+                    <tr><td>Submission opening</td><td><strong class="note">September 29, 2025</strong></td></tr>
+                    <tr><td>Submission deadline</td><td><strong class="note">October 25, 2025</strong></td></tr>
+                    <tr><td>Acceptance notification</td><td><strong class="note">November 25, 2025</strong></td></tr>
+                    <tr><td>Decision</td><td>Only by the Scientific Committee of the conference</td></tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+
+            <div class="schedule-card" aria-label="Full papers schedule">
+              <div class="card-head">
+                <h4>2. Full Papers</h4>
+              </div>
+              <div class="card-body">
+                <table class="table">
+                  <thead>
+                    <tr><th scope="col">Stage</th><th scope="col">Date</th></tr>
+                  </thead>
+                  <tbody>
+                    <tr><td>Submission opening</td><td><strong class="note">January 5, 2026</strong></td></tr>
+                    <tr><td>Submission deadline</td><td><strong class="note">February 25, 2026</strong></td></tr>
+                    <tr><td>Preliminary notification (Scientific Committee)</td><td><strong class="note">March 25, 2026</strong></td></tr>
+                    <tr><td>Correction / Final submission</td><td><strong class="note">April 8, 2026</strong></td></tr>
+                  </tbody>
+                </table>
+                <p class="remark"><strong>Remark:</strong> After this stage, papers accepted by the Scientific Committee will be forwarded to the journal. The final acceptance will be confirmed by the journal after the conference (conditional acceptance, minor/major revision, or rejection).</p>
+              </div>
+            </div>
+
+            <div class="schedule-card" aria-label="Conference schedule">
+              <div class="card-head">
+                <h4>3. Conference</h4>
+              </div>
+              <div class="card-body">
+                <table class="table">
+                  <thead>
+                    <tr><th scope="col">Stage</th><th scope="col">Date</th></tr>
+                  </thead>
+                  <tbody>
+                    <tr><td>Camera-ready submission (accepted abstracts)</td><td><strong class="note">January 1, 2026</strong></td></tr>
+                    <tr><td>Authors registration deadline</td><td><strong class="note">March 1, 2026</strong></td></tr>
+                    <tr><td>Conference</td><td><strong class="note">April 28–29, 2026</strong></td></tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
         </section>
 
         <section style="margin-top:24px">
