--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <img class="hero-slide" src="assets/images/commonwidget/header/conference_header2.jpg" alt="ICEODIS header 2" />
             <img class="hero-slide" src="assets/images/commonwidget/header/conference_header3.jpg" alt="ICEODIS header 3" />
             <div class="hero-overlay" role="region" aria-label="Conference highlight">
-              <h2>ICEODIS 2026</h2>
+              <h2>ICEODIS 2026 28-29 April</h2>
               <p>Welcome to Taza, Morocco</p>
               <p><a href="https://easychair.org/conferences?conf=iceodis2026" target="_blank" rel="noopener">Submit Your Abstract on EasyChair</a></p>
             </div>
